--- a/index.html
+++ b/index.html
@@ -4,51 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dictionary App</title>
-    <link href="styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="wrapper">
-        <header>English Dictionary</header>
-        <div class="search">
-          <input type="text" placeholder="Search a word" required spellcheck="false">
-          <i class="fas fa-search"></i>
-          <span class="material-icons">close</span>
+    <div class="container">
+        <h1>Dictionary App</h1>
+        <div class="search-box">
+            <input type="text" id="search-input" placeholder="Enter a word...">
+            <button onclick="searchWord()">Search</button>
         </div>
-        <p class="info-text">Type any existing word and press enter to get meaning, example, synonyms, etc.</p>
-        <ul>
-          <li class="word">
-            <div class="details">
-              <p>__</p>
-              <span>_ _</span>
-            </div>
-            <i class="fas fa-volume-up"></i>
-          </li>
-          <div class="content">
-            <li class="meaning">
-              <div class="details">
-                <p>Meaning</p>
-                <span>___</span>
-              </div>
-            </li>
-            <li class="example">
-              <div class="details">
-                <p>Example</p>
-                <span>___</span>
-              </div>
-            </li>
-            <li class="synonyms">
-              <div class="details">
-                <p>Synonyms</p>
-                <div class="list"></div>
-              </div>
-            </li>
-          </div>
-        </ul>
-      </div>
-  
-
+        <div id="result">
+            <h2 class="word"></h2>
+            <p class="phonetics"></p>
+            <p><strong>Meaning:</strong> <span class="meaning"></span></p>
+            <p><strong>Example:</strong> <span class="example"></span></p>
+            <p><strong>Synonyms:</strong> <span class="synonyms"></span></p>
+            <button id="play-audio">🔊 Pronounce</button>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
