--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <h2 class="word"><span class="phonetics"></span></h2>
             <button id="play-audio" class="fas fa-volume-up"></button>
           </div>
-            <p><strong>Meaning</strong> <span class="meaning"></span></p>
-            <p><strong>Example</strong> <span class="example"></span></p>
-            <p><strong>Synonyms</strong> <span class="synonyms"></span></p>
+            <p>Meaning <span class="meaning"></span></p>
+            <p>Example <span class="example"></span></p>
+            <p>Synonyms <span class="synonyms"></span></p>
             
         </div>
     </div>
